@@ -1,3 +1,9 @@
+2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-message): Use `walk-windows' instead of
+	`window-list', because the latter is not available at Meadow and
+	Mule2.
+
 2003-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-favicon.el (w3m-favicon-convert): Make sure data of the ico
